<resources>
    <string name="app_name">رانندگان بیفویز</string>
    <string name="menu_home_page">خانه</string>
    <string name="menu_travel">سفر های من</string>
    <string name="menu_profile">پروفایل</string>
    <string name="menu_address">آدرس های منتخب</string>
    <string name="menu_support">پشتیبانی</string>
    <string name="menu_exit">خروج</string>

    <string name="alert_ok">باشه</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_count">تعداد</string>
    <string name="label_description">توضیحات</string>
    <string name="label_mobile">موبایل</string>
    <string name="label_code_value">کد ارسال شده</string>
    <string name="login_and_send_sms">ثبت و ارسال پیامک تایید</string>
    <string name="login_complete">ثبت و ورود به سیستم</string>
    <string name="label_travel_status">وضعیت سفارش: </string>
    <string name="label_travel_product_count">تعداد قلم کالا: </string>
    <string name="label_travel_price">مبلغ سفارش: </string>
    <string name="label_travel_datetime">تاریخ ثبت: </string>
    <string name="label_travel_name">نام سفر: </string>

    <string name="label_travel_source">مبدا: </string>
    <string name="label_travel_destination">مقصد: </string>

    <string name="label_driver_name">نام و نام خانوادگی: </string>
    <string name="label_vehicle_name">اطلاعات خودرو: </string>
    <string name="label_vehicle_plaque">شماره پلاک: </string>
    <string name="label_mobile_number">شماره موبایل: </string>

    <string name="phone">شماره تلفن: </string>
    <string name="address">آدرس: </string>
</resources>