<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home_page" />
        <item
            android:id="@+id/menu_drawer_travel"
            android:icon="@drawable/menu_travel"
            android:title="@string/menu_travel" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/menu_address"
            android:icon="@drawable/menu_address"
            android:title="@string/menu_address" />
        <item
            android:id="@+id/menu_support"
            android:icon="@drawable/menu_support"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>